--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,6 +21,9 @@ framework:
     #serializer: { enable_annotations: true }
     templating:
         engines: ['twig']
+        form:
+            resources:
+                - 'form'
     default_locale: '%locale%'
     trusted_hosts: ~
     session:
@@ -37,7 +40,10 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-
+    form_themes:
+        - 'form/bootstrap_3_layout.html.twig'
+        #- 'form/form_table_layout.html.twig'
+        
 # Doctrine Configuration
 doctrine:
     dbal:
